Fixed posters not showing up by changing request to https, and fix nav bar not being on top

--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -23,16 +23,17 @@ header{
     position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 0;
-    /* z-index: 1; */
+    z-index: 1;
     background-color: #333;
     width:100%;
     display:flex;
     flex-wrap:wrap;
+    justify-content: center;
 }
 
 .nav-item{
-    float: left;
     border-right:1px solid #bbb;
+    border-left:1px solid #bbb;
     display: block;
     color: white;
     text-align: center;
